tests/invalid/semantico_condicion_no_bool.flow
// EXPECT: E306
workflow demo {
    var edad : int
    start -> validar
    validar -> end if edad
}
